--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "private": "true",
   "type": "module",
   "main": "cli.js",
+  "bin": {
+    "swagger-jsdoc-cli": "./bin/cli.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
